--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,12 @@ body {
     box-shadow:
         inset 18px 18px 36px 0 rgba(163, 177, 198, 0.5), inset -18px -18px 36px 0 rgba(255, 255, 255, 0.4)
 }
+
+@media (min-width: 320px) {
+    body {
+        padding-right: 20px;
+        padding-left: 20px;
+
+    }
+}
+
